<resources>
    <string name="app_name">应用锁</string>
    <string name="version">版本:%s</string>
    <string name="app_loading">加载中，请稍侯...</string>
    <string name="checkUpdateFaild">检查更新失败:%s</string>
    <string name="downloading">正在下载，请稍后</string>
    <string name="updating">升级提示</string>
    <string name="foundNewVersion">发现新版本</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="error_serverUrl">无效的服务器地址</string>
    <string name="auto_update">自动更新</string>
    <string name="opened">已开启</string>
    <string name="closed">已关闭</string>
    <string name="opene">开启</string>
    <string name="close">关闭</string>
    <string name="noSecurityPhoneNumber">匹配</string>
    <string name="app_locker">应用锁</string>
    <string name="please_set_password">请设置密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="password_mismatch">错误：两次输入的密码不一致，请检查！</string>
    <string name="username_empty">错误：用户名不能为空!</string>
    <string name="password_match">正确：两次输入的密码一致！</string>
    <string name="password_empty">错误：密码不能为空！</string>
    <string name="password_incorrect">错误：密码不正确！</string>
    <string name="set_first_password">请设置初始密码</string>
    <string name="set_second_password">请再次输入密码</string>
    <string name="exit_confirm_alert">再按一次退出程序</string>
    <string name="addOk">添加完毕</string>
    <string name="updateOk">更新完毕</string>
    <string name="deleteOk">删除完毕</string>
    <string name="delete_failed">删除失败</string>
    <string name="alterDialogTitle">请确认</string>
    <string name="confirmDeleteBlackInfo">一旦删除将不可恢复！</string>
    <string name="noEmpty">不能为空</string>
    <string name="canBeEmpty">可以为空</string>
    <string name="confirm">确认</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="view">查看</string>
    <string name="user_software">用户软件</string>
    <string name="system_software">系统软件</string>
    <string name="app_locker_msg">%s 已经被锁定!</string>
    <string name="password_error_count_alert">您还有%d次机会!</string>
    <string name="app_locked">应用已经被锁定</string>
    <string name="please_input_unlock_password">请输入解锁密码!</string>
    <string name="locked">已锁定</string>
    <string name="unlocked">已解锁</string>
    <string name="unlock">解锁</string>
    <string name="please_select_lock_apps">请选择需要锁定的应用</string>
    <string name="app_somebody_access">注意，有人试图访问您的 %s ！</string>
    <string name="see_more_applock_log">查看所有的App访问纪录</string>
    <string name="wait_delay_to_retry">错误，请%d秒后重试!</string>
    <string name="applock_security">安全设置</string>
    <string name="applock_password">安全密码</string>
    <string name="applock_password_summary">修改安全密码</string>
    <string name="unlock_failed_capture">入侵抓拍</string>
    <string name="unlock_failed_capture_enable">解锁失败拍照</string>
    <string name="unlock_failed_capture_enable_summary">在解锁应用输错密码时拍照</string>
    <string name="unlock_failed_capture_errcount">输错密码多少次时抓拍</string>
    <string name="password_err_count">密码输错次数</string>
    <string-array name="unlock_failed_capture_errcount_entries">
        <item>一次</item>
        <item>二次</item>
        <item>三次</item>
        <item>四次</item>
        <item>五次</item>
    </string-array>
    <string-array name="unlock_failed_capture_errcount_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="unlock_failed_capture_location">照片保存位置</string>
    <string name="unlock_failed_capture_location_summary">将照片保存到相册</string>
    <string name="add_tag_to_photo">添加拍摄标记到照片</string>
    <string-array name="locate_interval_list_erntries">
        <item>5秒</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>10分钟</item>
        <item>30分钟</item>
    </string-array>
    <string-array name="locate_interval_list_values">
        <item>5</item>
        <item>30</item>
        <item>60</item>
        <item>600</item>
        <item>1800</item>
    </string-array>
    <string-array name="locate_default_distance_list_erntries">
        <item>50米</item>
        <item>100米</item>
        <item>200米</item>
        <item>300米</item>
        <item>500米</item>
        <item>1000米</item>
    </string-array>
    <string-array name="locate_default_distance_list_values">
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
    <string name="lock_mode">锁定模式</string>
    <string-array name="screen_lock_mode_name">
        <item>锁屏后不重新锁定所有应用</item>
        <item>锁屏后重新锁定所有应用</item>
        <item>锁屏3分钟后重新锁定所有应用</item>
    </string-array>
    <string-array name="screen_lock_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="autolock_on_app_quit">应用退出后自动锁定</string>
    <string name="autolock_on_app_quit_summary">发现应用退出再次打开需要重新解锁</string>
    <string name="one_password_unlock_all">一次解锁全部</string>
    <string name="one_password_unlock_all_summary">输入一次密码解锁全部应用</string>
    <string name="locate_config">定位设置</string>
    <string name="locate_interval">定位时间间隔</string>
    <string name="locate_default_distance">缺省距离偏差</string>
    <string name="alert_lock_unlock">显示锁定提示</string>
    <string name="appLocker_password_err_detect" formatted="false">这个人想访问您的%s, 密码输错:%d次, 时间:%s</string>
    <string name="error_logs">访问纪录</string>
    <string name="clear_list">清空列表</string>
    <string name="total_applock_log_count">共拦截到%d次访问纪录</string>
    <string name="select_all">全选</string>
    <string name="password_err_counter">密码输错次数：%d</string>
    <string name="already_deleted_count">%d项已删除</string>
    <string name="time_args">时间：%s</string>
    <string name="location_args">地址：%s</string>
    <string name="attention">请注意</string>
    <string name="appLocker_err_detect">这个人想访问您的 %s </string>
    <string name="add_tag_to_photo_summary">添加时间、应用名称、密码错误次数等标记</string>
    <string name="child_selected_count" formatted="false">(%d/%d)</string>
    <string name="title_activity_app_locker_settings">应用锁设置</string>
    <string name="total_delete_count">%d项等待删除</string>
    <string name="no_item_exist">恭喜，纪录为空</string>
    <string name="no_body_access">非常棒，没有拦截到任何纪录!</string>
    <string name="no_more_items">没有更多纪录了</string>
    <string name="loading">正在加载...</string>
    <string name="location">位置:%s</string>
    <string name="name">名称</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="access_logs">拦截纪录</string>
    <string name="applock_list">应用列表</string>
    <string name="app_start">首页</string>
    <string name="rom">内部存储器</string>
    <string name="sdcard">外部SD卡</string>
    <string name="unable_start">无法启动</string>
    <string name="unable_uninstall">无法移除</string>
    <string name="sort_by_name">按名称排序</string>
    <string name="sort_by_time">按时间排序</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="lastweek">过去一周</string>
    <string name="lastmonth">过去一月</string>
    <string name="lastolder">更早前</string>
    <string name="mode_list">切换模式</string>
    <string name="default_mode">缺省模式</string>
    <string name="normal_mode">普通模式</string>
    <string name="visitor_mode">访客模式</string>
    <string name="child_mode">儿童模式</string>
    <string name="group_mode">组合模式</string>
    <string name="location_mode">位置模式</string>
    <string name="delete_last_mode_failed">删除失败：您至少需要使用一种模式!</string>
    <string name="help">帮助</string>
    <string name="share_to_friend">分享给朋友</string>
    <string name="add_failed">模式添加失败</string>
    <string name="mode_add_ok">模式%s已成功添加</string>
    <string name="delete_mode">删除模式</string>
    <string name="rename_mode">重命名模式</string>
    <string name="mode_rename_ok">模式重命名成功</string>
    <string name="mode_rename_failed">模式重命名失败</string>
    <string name="add_mode">[[点击添加模式]]</string>
    <string name="input_mode">请输入模式名，例如公司/家里</string>
    <string name="mode_add">添加模式</string>
    <string name="confirmDelete_modeinfo">是否确认删除模式%s?一旦删除将无法恢复!</string>
    <string name="finish_select">完成选择</string>
    <string name="select_app">选择应用</string>
    <string name="empty_apps_locks">请添加需要锁定的应用</string>
    <string name="applock_logs">访问日志</string>
    <string name="lock_condition">锁定条件</string>
    <string name="start_time">起始时间:%s</string>
    <string name="end_time">结束时间:%s</string>
    <string name="select_start_time">起始时间</string>
    <string name="select_end_time">结束时间</string>
    <string name="longitude">经度:%s</string>
    <string name="latitude">纬度:%s</string>
    <string name="radius">有效半径:%s米</string>
    <string name="real_address">地址：%s</string>
    <string name="repeat">重复</string>
    <string name="empty_lock_time_config">请添加何时锁定配置项</string>
    <string name="time_config">基于时间段</string>
    <string name="postion_config">基于地理位置</string>
    <string name="select_time">选择时间段</string>
    <string name="week">周%s&#160;&#160;</string>
    <string name="all_day">每一天</string>
    <string name="day7">日</string>
    <string name="day1">一</string>
    <string name="day2">二</string>
    <string name="day3">三</string>
    <string name="day4">四</string>
    <string name="day5">五</string>
    <string name="day6">六</string>
    <string name="start_time_greater">起始时间不能比结束时间更晚</string>
    <string name="end_time_less">结束时间不能比起始时间更早</string>
    <string name="please_input_search_address">请输入需要搜索的地点</string>
    <string name="input_empty">您还没有输入任何内容</string>
    <string name="no_result">抱歉，没有找到任何结果!</string>
    <string name="unknwon_location">抱歉，未知位置！</string>
    <string name="postion_not_marked">您还没有选择位置!</string>
    <string name="locate_error">定位失败，请检查网络是否正常开启或禁用获取位置信息权限</string>
    <string name="locate_ok">定位成功</string>
    <string name="selected_count" formatted="false">已选择(%d/%d)</string>
    <string name="add_app_ok">添加完毕，一共添加%s项</string>
    <string name="double_click_return_top">双击返回顶部</string>
    <string name="deleting">正在删除</string>
    <string name="adding">正在添加</string>
    <string name="use_this_location">选择此地</string>
    <string name="select_location">请直接在地图上选取地点或者搜索查询</string>
    <string name="copyright">Copyright@2015-2016 \n eeontheway.com 版本所有</string>
    <string name="about_version">版本 %s</string>
    <string name="goto_vote">给个好评</string>
    <string name="check_update">检查更新</string>
    <string name="app_website">官方网站</string>
    <string name="feed_back">我要反馈</string>
    <string name="feed_back_list">反馈纪录</string>
    <string name="pay_support">捐赠支持</string>
    <string name="submit">提交</string>
    <string name="search">搜索</string>
    <string name="leave_msg">请留下您的宝贵意见，我们将为您不断改进</string>
    <string name="write_response">请填写反馈回复</string>
    <string name="leave_contact">邮箱/QQ/电话等，可不填</string>
    <string name="submit_feedback">写完提交</string>
    <string name="no_send_feedback_again">请勿重复提交反馈</string>
    <string name="feedback_send_ok">您的反馈信息已发送,感谢您的反馈!</string>
    <string name="feedback_send_fail">反馈信息发送失败:%s!</string>
    <string name="please_add_feedback">您还没有填写反馈内容!</string>
    <string name="please_add_contact">联系方式</string>
    <string name="menu_feedback_list">历史反馈</string>
    <string name="recv_feedback">您的反馈信息已回复!</string>
    <string name="share_success">分享成功，感谢您的无限支持!</string>
    <string name="share_cancel">很遗憾，分享被取消!</string>
    <string name="share_deny">分享被拒绝</string>
    <string name="share_error">分享出错</string>
    <string name="wx_share_timeline_notsupport">很遗憾，您的微信版本过低，不支持分享到朋友圈!</string>
    <string name="share_from_app">来自应用锁的分享</string>
    <string name="please_choose">请选择</string>
    <string name="wx_friend">微信朋友</string>
    <string name="wx_timeline">微信朋友圈</string>
    <string name="qq_friend">QQ朋友</string>
    <string name="feedback_content">反馈内容</string>
</resources>