<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorSecondaryBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tl_header"
        layout="@layout/item_activity_header" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/view_common_margin"
        android:layout_marginLeft="@dimen/view_width_padding"
        android:layout_marginRight="@dimen/view_width_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/repeat"
            android:textSize="@dimen/normal_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_day7"
                style="@style/dayCheck"
                android:text="@string/day7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_day1"
                android:text="@string/day1"
                style="@style/dayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_day2"
                android:text="@string/day2"
                style="@style/dayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_day3"
                android:text="@string/day3"
                style="@style/dayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_day4"
                android:text="@string/day4"
                style="@style/dayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_day5"
                android:text="@string/day5"
                style="@style/dayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_day6"
                android:text="@string/day6"
                style="@style/dayCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:src="@drawable/list_divider_no_width"
            android:layout_margin="@dimen/view_common_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/view_width_padding"
            android:layout_marginLeft="@dimen/view_width_padding"
            android:layout_marginRight="@dimen/view_width_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/select_start_time"
                android:textSize="@dimen/normal_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TimePicker
                android:id="@+id/tp_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner"/>
            <ImageView
                android:src="@drawable/list_divider_no_width"
                android:layout_marginTop="@dimen/view_common_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/select_end_time"
                android:textSize="@dimen/normal_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TimePicker
                android:id="@+id/tp_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner"/>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:src="@drawable/list_divider_no_width"
        android:layout_marginTop="@dimen/view_common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/view_common_margin"
        android:layout_marginLeft="@dimen/view_width_padding"
        android:layout_marginRight="@dimen/view_width_padding"
        android:layout_marginBottom="@dimen/view_common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_ok"
            android:text="@string/ok"
            android:layout_weight="1"
            android:background="@drawable/login_button_selector"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            android:textColor="@color/colorSecondTextColor"
            android:layout_marginLeft="@dimen/view_common_margin"
            android:background="@drawable/common_btn_selector"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
