<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/gray"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_info"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:text="@string/alterDialogTitle"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/messageTextView"
        android:text="@string/confirmDeleteBlackInfo"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_ok"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>