<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/comm_dialog_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_title"
        android:text="@string/delete_mode"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="@dimen/view_width_padding"
        android:padding="@dimen/view_width_padding"
        android:textSize="@dimen/large_text_size"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_msg"
        android:text="@string/confirmDelete_modeinfo"
        android:layout_margin="@dimen/view_common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_del"
            android:layout_margin="@dimen/view_common_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_button_selector"
            android:textColor="@color/white"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_margin="@dimen/view_common_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_btn_selector"
            android:textColor="@color/colorSecondTextColor"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>