<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.eeontheway.android.applocker.ui.ListHeaderView
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:checkAll_text="@string/select_all"
        app:textColor="@color/colorSecondTextColor" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/ll_header"
        android:layout_weight="1"
        android:scrollbars="vertical" />
    <Button
        android:id="@+id/bt_del"
        style="@style/ListDelButton"
        android:text="@string/delete" />
    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_body_access"
        android:textColor="@color/colorSecondTextColor"
        android:visibility="gone" />
</LinearLayout>
